refactor reader controls; improve comment view transitions

--- a/src/collections/proof-of-existence/1.md
+++ b/src/collections/proof-of-existence/1.md
@@ -92,7 +92,7 @@ There was a silver door with no handle, and on the opposite wall… I did a doub
 
 A moment later— 
 
-Krrk. 
+*Krrk.* 
 
 The mirror cracked. 
 
@@ -104,13 +104,13 @@ A wisp of golden light formed into a book of light that scattered the shadows in
 
 I didn’t know what language this was, but somehow, just looking at it, I understood its meaning anyway. 
 
-[—And thus, Acacius Duval lost his body, titles, and World Proof to the opponent he had summoned for the Devouring Exchange.] 
+[—And thus, Acacius Duval lost his body, titles, and World Proof to the opponent he had summoned for the Devouring Exchange.]
 
 Hey, these were some scary words being written here. World Proof? Devouring Exchange? Putting the hints together, wasn’t this thing saying that I had taken this Acacius guy’s whole existence? 
 
-[However, to be accepted by Kosmonymia, one must first have a name.] 
+[However, to be accepted by Kosmonymia, one must first have a name.]
 
-[Noumenon, declare thy name.] 
+[Noumenon, declare thy name.]
 
 I almost wanted to ask what being rejected by Kosmonymia would mean, but the presence emanating from this book felt so overwhelming, I didn’t want to find out. 
 
@@ -202,7 +202,7 @@ I felt rather helpless. Was this “World Proof” truly a representation of how
 
 Still, at least the usage requirements weren’t too difficult. 
 
-I held out my hand and called out in my mind, World Proof! 
+I held out my hand and called out in my mind, *World Proof!* 
 
 Nothing happened for a long, excruciating moment. 
 
