ch2 edit cynara desc

--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -2,9 +2,9 @@
 title: "Unexpected Guest (2)"
 arc: 1
 chapter: 2
-characters: ["cynara", "graves", "zaire", "cyprian"]
+characters: ["cynara", "graves", "zaire", "cyprian", "luka"]
 warnings: []
-lastEdit: 2025-03-12
+lastEdit: 2025-03-19
 ---
 After reading through the entire Record of Existence, I took a moment to gather my thoughts. 
 
@@ -130,7 +130,7 @@ I’d figured as much from his fancy coat, the safe house, and this butler-like 
 
 We stepped into a giant foyer with a glittering chandelier, marble tiles, and polished columns framing intricate reliefs on the walls. 
 
-I didn’t have much time to examine what they were depicting before I sensed movement at the top of the spiraling stairs. I looked up and met eyes with a teenage girl in a refined dress. Her sharp golden eyes glared out from underneath her pink curls.
+I didn’t have much time to examine what they were depicting before I sensed movement at the top of the spiraling stairs. I looked up and met eyes with a teenage girl in a refined dress. Her pink hair was pulled back into a thick pair of braided pigtails. Her sharp golden eyes glared out from underneath her bangs.
 
 An uncomfortable mix of inferiority, guilt, and pity rose up in me. 
 
