minor edits: clarify frames in early chapters

--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -232,7 +232,11 @@ I couldn’t dismiss his wishes altogether, though. There was a logic behind Aca
 
 I spent the next few days quietly in Acacius’ room, going through his personal journals first to memorize his speech patterns, then reviewing the books I’d selected. 
 
-I learned about the geography of this world, Kosmonymia, which helped me understand I was in a country at the eastern end of the continent known as the Principality of Iyiria. I absorbed more about the general common sense of technology and magic in the world; there was electricity and industrialization, but they lacked some quotidian technologies of my world, and there was a lot of magic mixed in as well. I also started going through Acacius’ notes on the Devouring Exchange, which was slow and speculative work.
+I learned about the geography of this world, Kosmonymia, which helped me understand I was in a country at the eastern end of the continent known as the Principality of Iyiria. I absorbed more about the general common sense of technology and magic in the world; there was electricity and industrialization, but they lacked some quotidian technologies of my world, and there was a lot of magic mixed in as well. The different systems of technology and power were apparently enabled through the use of something called "frames," such as the electromagnetic frame or the aura force frame. 
+
+I couldn't find a book that dumbed it down enough for me to understand how that worked, though. Maybe that knowledge was considered too basic in this wor.d 
+
+I also started going through Acacius’ notes on the Devouring Exchange, which was slow and speculative work.
 
 Interestingly enough, the Duvals as a whole seemed ignorant of the fact that the Devouring Exchange granted new powers by killing and absorbing a real entity that matched their specifications. To them, the fight was just a trial. 
 
