--- a/src/collections/proof-of-existence/3.md
+++ b/src/collections/proof-of-existence/3.md
@@ -4,7 +4,7 @@ arc: 1
 chapter: 3
 characters: ["cynara", "luka"]
 warnings: []
-lastEdit: 2025-03-12
+lastEdit: 2025-03-19
 ---
 It took less than ten minutes for the servants to bring the guest to my room. He’d been tightly bound with sturdy ropes and roughly wiped clean, revealing a face that I could only describe as “stupidly handsome.” They’d left on his long golden earrings, forming a striking contrast with his sharp eyes and soft jaw. A blue dragon pendant had been hung around his neck for reasons I could only begin to guess. 
 
@@ -68,7 +68,7 @@ But he still played along.
 
 “Capturing Dreyminn… drew my attention… to the New Lunar Society. Finding their frame… and infiltrating that realm… led me to your family’s… crimes. But my teacher… didn’t respond to my emergency signal.” 
 
-Fascinating connections were being made here. At this point, it was safe to say the Duval family was in the wrong, right? I was also surprised to hear him mention frames. From what I’d read in Acacius’ books, frames were something that allowed different, and sometimes contradictory, systems of magic and technology to exist in parallel. This way, different systems could be used in the same place and time. But it was hard to move from dry theoretical passages to a practical example all of a sudden. Weren’t frames something that anyone had access to? Why would the New Lunar Society have their own frame? 
+Fascinating connections were being made here. At this point, it was safe to say the Duval family was in the wrong, right? I was also surprised to hear him mention frames. From what I’d understood from Acacius’ books, frames were something that allowed different, and sometimes contradictory, systems of magic and technology to exist in parallel. This way, different systems could be used in the same place and time. But it was hard to move from dry theoretical passages to a practical example all of a sudden. Weren’t frames something that anyone had access to? Why would the New Lunar Society have their own frame? 
 
 “And you sent the signal from within the realm?” I asked, raising an eyebrow. 
 
