adjust code text book appearance

--- a/src/collections/proof-of-existence/1.md
+++ b/src/collections/proof-of-existence/1.md
@@ -10,23 +10,23 @@ In my dreams, everything was burning.
 
 A voice was calling out for me. 
 
-[Someone calm, collected, and quick-witted.] 
+`[Someone calm, collected, and quick-witted.]` 
 
 I ignored it at first. I didn’t want to hear it; I’d already done everything that I wanted to do. If there was anything more to be done, Chen Xiarui could take care of the rest. I had no intention of waking up again. 
 
-[Someone capable of acting and deceiving anyone.] 
+`[Someone capable of acting and deceiving anyone.]` 
 
 But the voice grew louder and louder in my ears, ringing clear as a bell. 
 
-[Someone who would be happy just living an ordinary life.] 
+`[Someone who would be happy just living an ordinary life.]` 
 
 Fine. Maybe I’d open my eyes just one moment to make this guy shut up.  
 
-[Someone… who is brave.] 
+`[Someone… who is brave.]` 
 
 As that thought crossed my mind, an intense dizziness struck me, as if I was being pulled down into a deep dream. 
 
-[Come forth and be bound by my name!] 
+`[Come forth and be bound by my name!]` 
 
 I struggled to open my eyes and saw before me a grand library, great oaken shelves stretching away into the distance over finely marbled floor. The chandelier hanging from the high-vaulted ceiling cast a warm and gentle glow over the person standing before me. He looked around my age, with tanned skin, rosy hair, and a refined, aristocratic suit. There were mystical circles drawn on the marble beneath him and beneath me, with faint scripts connecting them both.   
 
@@ -44,7 +44,7 @@ Great, now he was armed and I wasn’t. I kicked off the ground and rushed at hi
 
 But despite letting out a cry of pain, he didn’t let go of the knife, even when I grappled to get it out of his control. He gritted his teeth and grabbed me tight with his free hand. 
 
-“I declare this title to be true,” he gasped. “[Executor of the Sacrifice’s Last Will].” 
+“I declare this title to be true,” he gasped. “`[Executor of the Sacrifice’s Last Will]`.” 
 
 What? 
 
@@ -54,7 +54,7 @@ A golden chain materialized around me, wrapping itself around my chest before si
 
 Huh? What kind of setting was this? 
 
-I quickly pushed the young man away and backed up a few steps. He groaned as he sat up. There was a golden dust seeping out of his stab wounds in place of blood, like scattering sand. He stretched his uninjured arm out. “[Caller], come back to me!” 
+I quickly pushed the young man away and backed up a few steps. He groaned as he sat up. There was a golden dust seeping out of his stab wounds in place of blood, like scattering sand. He stretched his uninjured arm out. “`[Caller]`, come back to me!” 
 
 Nothing happened. I glanced around just to be sure. The young man’s expression twisted. 
 
@@ -104,13 +104,13 @@ A wisp of golden light formed into a book of light that scattered the shadows in
 
 I didn’t know what language this was, but somehow, just looking at it, I understood its meaning anyway. 
 
-[—And thus, Acacius Duval lost his body, titles, and World Proof to the opponent he had summoned for the Devouring Exchange.]
+`[—And thus, Acacius Duval lost his body, titles, and World Proof to the opponent he had summoned for the Devouring Exchange.]`
 
 Hey, these were some scary words being written here. World Proof? Devouring Exchange? Putting the hints together, wasn’t this thing saying that I had taken this Acacius guy’s whole existence? 
 
-[However, to be accepted by Kosmonymia, one must first have a name.]
+`[However, to be accepted by Kosmonymia, one must first have a name.]`
 
-[Noumenon, declare thy name.]
+`[Noumenon, declare thy name.]`
 
 I almost wanted to ask what being rejected by Kosmonymia would mean, but the presence emanating from this book felt so overwhelming, I didn’t want to find out. 
 
@@ -120,7 +120,7 @@ As long as it didn’t show any malice towards me, and as long as it didn’t ta
 
 The book resumed its writing. 
 
-[Jeong Eunseok took Acacius’ body and absorbed the power of Acacius’ soul. But Acacius had long made preparations that bound his own soul to a heavier call. Thus, despite the binding power of the Devouring Exchange, the memories that Jeong Eunseok absorbed from Acacius’ soul were fragmented and incomplete.] 
+`[Jeong Eunseok took Acacius’ body and absorbed the power of Acacius’ soul. But Acacius had long made preparations that bound his own soul to a heavier call. Thus, despite the binding power of the Devouring Exchange, the memories that Jeong Eunseok absorbed from Acacius’ soul were fragmented and incomplete.]` 
 
 Well, I certainly didn’t feel like I’d gained any mystic knowledge or power. 
 
@@ -132,25 +132,25 @@ Gasping and drenched in a cold sweat, I raised my head to look at the shining bo
 
 There was a new line writing itself. 
 
-[The Scribe bore witness to Jeong Eunseok’s existence.]
+`[The Scribe bore witness to Jeong Eunseok’s existence.]`
 
-[The Secret-Keeper gazed upon all that he had lost.]
+`[The Secret-Keeper gazed upon all he never said.]`
 
-[The Signifier placed him within the great frame.]
+`[The Signifier placed him within the great frame.]`
 
-[As a named being, Jeong Eunseok was also entitled to Kosmonymia’s blessings.] 
+`[As a named being, Jeong Eunseok was also entitled to Kosmonymia’s blessings.]` 
 
 An unfamiliar energy bloomed in my chest. 
 
-[According to his life, his Record of Existence was written.]
+`[According to his life, his Record of Existence was written.]`
 
-[According to his characteristics, his World Proof was crafted.]
+`[According to his characteristics, his World Proof was crafted.]`
 
-[According to the Devouring Exchange, he was granted the titles that Acacius Duval once bore.] 
+`[According to the Devouring Exchange, he was granted the titles that Acacius Duval once bore.]` 
 
-[The World Proof and Record of Existence were connected to his name, and he would only need to will it forth for these things to manifest.] 
+`[The World Proof and Record of Existence were connected to his name, and he would only need to will it forth for these things to manifest.]` 
 
-[And thus did Acacius lose his existence as “Acacius Duval,” and Jeong Eunseok obtain it.] 
+`[And thus did Acacius lose his existence as “Acacius Duval,” and Jeong Eunseok obtain it.]` 
 
 The book flipped itself closed and faded away in a streak of light. The vast sense of power that accompanied it disappeared as well, leaving me kneeling alone in the room. The blood from the ritual circle was starting to soak my clothes. 
 
@@ -172,13 +172,13 @@ A small black booklet gilded with gold patterns materialized before me. At my cu
 
 > **Name:** Jeong Eunseok
 >
-> **World Proof:** [Honest Man’s Deception]
+> **World Proof:** `[Honest Man’s Deception]`
 >
 > **Titles:** 
-> - [Acacius Duval]
-> - [Caller of What Must Be True]
-> - [Executor of the Sacrifice’s Last Will]
-> - \[…]
+> - `[Acacius Duval]`
+> - `[Caller of What Must Be True]`
+> - `[Executor of the Sacrifice’s Last Will]`
+> - `[…]`
 > 
 > **Evaluation:** Contradictory, hypocritical, capricious, and yet truthful and constant all the same, this being has chosen a way of life that others would find hard to match.
 
@@ -188,7 +188,7 @@ The world didn’t respond to my complaints.
 
 Fine then. I flipped the Record to the next page. 
 
-> **World Proof:** [Honest Man’s Deception] 
+> **World Proof:** `[Honest Man’s Deception]` 
 > 
 > **Form:** Mask
 > 
@@ -212,7 +212,7 @@ Wasn’t this actually pretty cool…?
 
 I shook my head. Now wasn’t the time for that; I needed to focus. I took off the mask and looked through the rest of my Record, which seemed to be dedicated to describing my “titles.”
 
-> **Title:** [Acacius Duval] 
+> **Title:** `[Acacius Duval]` 
 >
 > **Symbol:** Acacia flower
 > 
@@ -220,7 +220,7 @@ I shook my head. Now wasn’t the time for that; I needed to focus. I took off t
 
 Nothing about what the title itself did… Was it just for decoration? I turned my eyes to the next title. 
 
-> **Title:** [Caller of What Must Be True]
+> **Title:** `[Caller of What Must Be True]`
 > 
 > **Symbol:** Black knife
 > 
@@ -233,7 +233,7 @@ Wait a minute. A black knife?
 
 With a bad feeling, I looked at the next page. 
 
-> **Title:** [Executor of the Sacrifice’s Last Will]
+> **Title:** `[Executor of the Sacrifice’s Last Will]`
 > 
 > **Symbol:** Golden chain
 > 
