--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -52,9 +52,9 @@ Given that the “Devouring Exchange” had the power to let me completely take 
 
 Uh-whew. If I had any other World Proof, I would have been caught right away. 
 
-I held out my hand and muttered, “[Caller of What Must Be True.]” 
+I held out my hand and muttered, “`[Caller of What Must Be True.]`” 
 
-[Honest Man’s Deception.] 
+`[Honest Man’s Deception.]` 
 
 A sharp black knife appeared in my grasp. When I angled it for Graves’ inspection, a hidden pattern surfaced in the light, like a many-eyed demon grinning wickedly out from the blade. Shit. This Acacius guy was pretty cool, huh? 
 
@@ -190,7 +190,7 @@ I just needed to be mindful of a few details while I was here.
 
 I looked at myself in the mirror, at the pink acacia flowers tattooed over my heart, and the thin golden chains that encircled them. The symbols of Acacius’ other titles were scattered all over my skin.  
 
-The biggest problem, even now, was the black knife on the inside of my left forearm. Anyone who had seen [Caller of What Must Be True] would recognize it instantly, and then they might ask why Acacius’ World Proof had transformed into a normal title, and then I’d have to take care of them somehow. And if things got violent, well. Wouldn’t that just be so sad? 
+The biggest problem, even now, was the black knife on the inside of my left forearm. Anyone who had seen `[Caller of What Must Be True]` would recognize it instantly, and then they might ask why Acacius’ World Proof had transformed into a normal title, and then I’d have to take care of them somehow. And if things got violent, well. Wouldn’t that just be so sad? 
 
 It looked like I wouldn’t be wearing anything short-sleeved in the near future. Fortunately, from what I’d seen, Acacius’ wardrobe consisted almost exclusively of long-sleeved shirts. 
 
@@ -252,7 +252,7 @@ Anyways, that was why anyone whose World Proof changed after the ritual was kill
 
 Scary. I had better make sure no one found me out. 
 
-Even if the Duvals generally were unaware of the ritual’s true nature, Acacius specifically must have known that he was facing a real entity — otherwise he wouldn’t have used [Caller] to give me a title. But were his personal relationships really so bad that he’d rather gamble on making me carry out his last will, rather than entrusting it to someone he knew? 
+Even if the Duvals generally were unaware of the ritual’s true nature, Acacius specifically must have known that he was facing a real entity — otherwise he wouldn’t have used `[Caller]` to give me a title. But were his personal relationships really so bad that he’d rather gamble on making me carry out his last will, rather than entrusting it to someone he knew? 
 
 I also spent some time exploring the manor to keep an eye on the people’s movements. The servants’ actions were thankfully predictable, but it was weird that Cynara was sneaking out at night to swing her sword around in the garden. What was that all about?
 
