--- a/src/collections/proof-of-existence/3.md
+++ b/src/collections/proof-of-existence/3.md
@@ -190,19 +190,19 @@ Couldn’t this bastard have left clearer instructions about what to do?
 
 I called up my Record and checked the pages. 
 
-> **Title:** [Executor of the Sacrifice’s Last Will]
+> **Title:** `[Executor of the Sacrifice’s Last Will]`
 > 
 > **Symbol:** Golden chain
 > 
 > **Description:** A title obtained by carrying out the last will of those who died in pursuit of a higher cause or were killed unjustly. Of those you’ve met most recently, only Acacius Duval fits the conditions.
 > 
-> […]
+> `[…]`
 
 There were no changes. My guest’s name wasn’t on there. So either he hadn’t died unjustly, killing Acacius wasn’t a greater cause, or my guest wasn’t actually dead. How did the Record decide who met the criteria of this title, anyway? No matter how I twisted my brain, it was hard to imagine why Acacius would qualify.
 
 Whatever, this wasn’t the important point right now. What was important was this. 
 
-> **Title:** [Bound Prophet of the Single Path]
+> **Title:** `[Bound Prophet of the Single Path]`
 > 
 > **Symbol:** Seamlessly knotted rope with no ends
 >
@@ -259,7 +259,7 @@ But Cynara didn’t leave. The previous hostility and ridicule had faded from he
 
 Huh? “Just, it feels as though some disaster is approaching… You have your sword, right?” 
 
-I could use my World Proof to manifest [Caller], but maybe I should find a more sturdy weapon, too. 
+I could use my World Proof to manifest `[Caller]`, but maybe I should find a more sturdy weapon, too. 
 
 Cynara tensed, but eventually unveiled the rapier she’d had hidden behind her back. 
 
