edit first 3 poe chs

--- a/src/collections/proof-of-existence/1.md
+++ b/src/collections/proof-of-existence/1.md
@@ -4,7 +4,7 @@ arc: 1
 chapter: 1
 characters: ["acacius"]
 warnings: []
-lastEdit: 2025-03-12
+lastEdit: 2025-03-21
 ---
 In my dreams, everything was burning. 
 
@@ -64,15 +64,17 @@ I attacked him instead of answering. We had a short scuffle where he shouted a l
 
 There was a cage that didn’t hold me, and thorns that didn’t bind me. There was a lantern that did not shine on me, and shadows that did not touch me. I didn’t understand anything except that he meant me harm, and he was panicking. 
 
-As he lost his composure, he became even more incomprehensible. It was a tragic instance where sharing the same language couldn’t penetrate the barrier of mutual understanding at all. 
+So of course, I beat him up. 
 
-It was very clear that he hadn’t intended anything good for me, though, so after giving him a good beating I tossed him into the mystic circle I’d been standing on before going to stand on his. 
+As he lost his composure, the things he said became even more incomprehensible to me. It was a tragic instance where sharing the same language couldn’t penetrate the barrier of mutual understanding at all. 
+
+It was very clear that he hadn’t intended anything good for me, though, so after working him over, I tossed him into the mystic circle I’d been standing on before and went to stand on his. 
 
 He tried to get to his feet, but it was too late. The circles beneath us lit up, encircling us with golden barriers. He slammed his palms against the barrier a few times before sliding down to his knees. His expression was quite bad. In my opinion, his situation could only be described as, “Serves him right.” 
 
 The young man’s body began to dissolve into golden light. He closed his eyes, quickly calming down. When he opened them again, he was full of firm resolve.  
 
-“Hey,” he said. “Remember this. You are now Acacius Duval, but that can never be your name.” 
+“Hey,” he said. “Remember this. You are now Acacius Duval, so you must bear the weight of the name.” 
 
 His body completely scattered apart. 
 
@@ -134,7 +136,7 @@ There was a new line writing itself.
 
 `[The Scribe bore witness to Jeong Eunseok’s existence.]`
 
-`[The Secret-Keeper gazed upon all he never said.]`
+`[The Secret-Keeper gazed upon all that he had lost.]`
 
 `[The Signifier placed him within the great frame.]`
 
