--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -4,7 +4,7 @@ arc: 1
 chapter: 2
 characters: ["cynara", "graves", "zaire", "cyprian", "luka"]
 warnings: []
-lastEdit: 2025-03-19
+lastEdit: 2025-03-21
 ---
 After reading through the entire Record of Existence, I took a moment to gather my thoughts. 
 
@@ -188,13 +188,13 @@ Okay, I decided. My last-ditch plan would no longer be faking my death and runni
 
 I just needed to be mindful of a few details while I was here. 
 
-I looked at myself in the mirror, at the pink acacia flowers tattooed over my heart, and the thin golden chains that encircled them. The symbols of Acacius’ other titles were scattered all over my skin.  
+I looked at myself in the mirror, at the pink acacia flowers tattooed over my heart, and the thin golden chains that encircled them. The symbols of Acacius’ other titles were scattered all over my skin.
 
-The biggest problem, even now, was the black knife on the inside of my left forearm. Anyone who had seen `[Caller of What Must Be True]` would recognize it instantly, and then they might ask why Acacius’ World Proof had transformed into a normal title, and then I’d have to take care of them somehow. And if things got violent, well. Wouldn’t that just be so sad? 
+The biggest problem, even now, was the black knife on the inside of my left forearm. Anyone who had seen `[Caller of What Must Be True]` would recognize it instantly, and then they might ask why Acacius’ World Proof had transformed into a normal title, and then I’d have to do something about them. And if things got violent, well. Wouldn’t that just be so sad? 
 
 It looked like I wouldn’t be wearing anything short-sleeved in the near future. Fortunately, from what I’d seen, Acacius’ wardrobe consisted almost exclusively of long-sleeved shirts. 
 
-The second big problem was my complete ignorance of my surroundings. I could get a lot of answers simply by implying that I’d lost my memories in the ritual, but given the lack of a loving family atmosphere so far, handing them the opportunity to manipulate my understanding of them and the world around me felt like a bad idea. No way I was trusting them with that. I would be better off faking my composure until I figured things out.
+The second big problem was my complete ignorance of my surroundings. I could get a lot of answers simply by implying that I’d lost my memories in the ritual, but given the lack of a loving family atmosphere so far, handing them the opportunity to manipulate my understanding of the world around me felt like a bad idea. No way I was trusting them with that. I would be better off faking my composure until I figured things out.
 
 I changed into Acacius’ silk pajamas and spent some time luxuriating in his giant bed with its stupidly high thread count sheets before focusing again. I needed to search for personal affects and other items that could tell me about Acacius’ past, his personality, and how I should act like him. 
 
@@ -230,15 +230,19 @@ To be honest, aside from the lifespan issue, there was no good reason to kill hi
 
 I couldn’t dismiss his wishes altogether, though. There was a logic behind Acacius’ actions. I just needed to figure out what it was. 
 
-I spent the next few days quietly in Acacius’ room, going through his personal journals first to memorize his speech patterns, then reviewing the books I’d selected. 
+I spent the next few days quietly in Acacius’ room, going through his personal journals first to memorize his linguistic habits and personality tics. He wasn't overly formal, but he spoke more eruditely than my typical casual speech; his attitude towards others was minimally polite, but not necessarily respectful; and he seemed to dislike being noticeably emotive. Judging from his vague descriptions about his “progress,” he was secretive, controlling, and under quite a bit of stress. 
 
-I learned about the geography of this world, Kosmonymia, which helped me understand I was in a country at the eastern end of the continent known as the Principality of Iyiria. I absorbed more about the general common sense of technology and magic in the world; there was electricity and industrialization, but they lacked some quotidian technologies of my world, and there was a lot of magic mixed in as well. The different systems of technology and power were apparently enabled through the use of something called "frames," such as the electromagnetic frame or the aura force frame. 
+So it didn't seem like too difficult a role to play. 
 
-I couldn't find a book that dumbed it down enough for me to understand how that worked, though. Maybe that knowledge was considered too basic in this wor.d 
+Next, I reviewed the books I’d selected. 
+
+I learned about the geography of this world, Kosmonymia, which helped me understand I was in a country known as the Principality of Iyiria, located at the eastern end of the continent. I absorbed more about the general common sense of technology and magic in the world; there was electricity and industrialization, but they lacked some quotidian technologies of my world, and there was a lot of magic mixed in as well. The different systems of technology and power were apparently enabled through the use of something called "frames," such as the electromagnetic frame or the aura force frame. 
+
+I couldn't find a book that dumbed it down enough for me to understand how that worked, though. Maybe that knowledge was considered too basic in this world. 
 
 I also started going through Acacius’ notes on the Devouring Exchange, which was slow and speculative work.
 
-Interestingly enough, the Duvals as a whole seemed ignorant of the fact that the Devouring Exchange granted new powers by killing and absorbing a real entity that matched their specifications. To them, the fight was just a trial. 
+Interestingly enough, the Duvals as a whole seemed ignorant of the fact that the Devouring Exchange granted new powers by killing and absorbing an entity that matched their specifications. To them, the fight was just an illustory trial conjured by the ritual. 
 
 Perhaps they’d been blinded by the words of the spirit they’d allegedly won the trial from, who’d described the process as such: “Nothing can be gained without paying a price. Prove yourself better than what you aspire to be.” 
 
@@ -252,7 +256,7 @@ Anyways, that was why anyone whose World Proof changed after the ritual was kill
 
 Scary. I had better make sure no one found me out. 
 
-Even if the Duvals generally were unaware of the ritual’s true nature, Acacius specifically must have known that he was facing a real entity — otherwise he wouldn’t have used `[Caller]` to give me a title. But were his personal relationships really so bad that he’d rather gamble on making me carry out his last will, rather than entrusting it to someone he knew? 
+Even if the Duvals generally were unaware of the ritual’s true nature, Acacius specifically must have known that he was facing a real entity — otherwise he wouldn’t have used `[Caller]` to give me a title. But were his personal relationships really so bad that he’d rather gamble on making me carry out his last will, instead of entrusting it to someone he knew? 
 
 I also spent some time exploring the manor to keep an eye on the people’s movements. The servants’ actions were thankfully predictable, but it was weird that Cynara was sneaking out at night to swing her sword around in the garden. What was that all about?
 
