--- a/src/collections/proof-of-existence/3.md
+++ b/src/collections/proof-of-existence/3.md
@@ -4,7 +4,7 @@ arc: 1
 chapter: 3
 characters: ["cynara", "luka"]
 warnings: []
-lastEdit: 2025-03-19
+lastEdit: 2025-03-21
 ---
 It took less than ten minutes for the servants to bring the guest to my room. He’d been tightly bound with sturdy ropes and roughly wiped clean, revealing a face that I could only describe as “stupidly handsome.” They’d left on his long golden earrings, forming a striking contrast with his sharp eyes and soft jaw. A blue dragon pendant had been hung around his neck for reasons I could only begin to guess. 
 
@@ -68,7 +68,7 @@ But he still played along.
 
 “Capturing Dreyminn… drew my attention… to the New Lunar Society. Finding their frame… and infiltrating that realm… led me to your family’s… crimes. But my teacher… didn’t respond to my emergency signal.” 
 
-Fascinating connections were being made here. At this point, it was safe to say the Duval family was in the wrong, right? I was also surprised to hear him mention frames. From what I’d understood from Acacius’ books, frames were something that allowed different, and sometimes contradictory, systems of magic and technology to exist in parallel. This way, different systems could be used in the same place and time. But it was hard to move from dry theoretical passages to a practical example all of a sudden. Weren’t frames something that anyone had access to? Why would the New Lunar Society have their own frame? 
+Fascinating connections were being made here. At this point, it was safe to say the Duval family was in the wrong, right? I was also surprised to hear him mention frames. From what I’d understood from Acacius’ books, frames were something that allowed different, and sometimes contradictory, systems of magic and technology to exist in parallel. This way, different systems could be used in the same place and time. But it was hard to move from dry theoretical passages to a practical example all of a sudden. Weren’t frames something that anyone had access to? What did it mean for the New Lunar Society have their own frame? 
 
 “And you sent the signal from within the realm?” I asked, raising an eyebrow. 
 
@@ -132,7 +132,7 @@ I remembered that name. The Scribe, the Signifier, and the Secret-Keeper… was 
 
 I wasn’t sure what kind of rites or prayers were common in this world, so I just held my nameless guest’s hand and prayed silently. 
 
-Exalted Scribe, as this world’s watcher, may you bear witness to this person’s life so that he will not be forgotten. 
+*Exalted Scribe, as this world’s watcher, may you bear witness to this person’s life so that he will not be forgotten.* 
 
 That was about all that I could think to say. 
 
@@ -239,7 +239,7 @@ This time, I couldn’t be bothered to bite back. “Hey… Cynara. Do we have a
 
 “Don’t tell me you’ve forgotten about the ones in the moon path realm.” 
 
-“Not the moon paths,” I said, with a bit more vehemence than I’d meant. 
+“Not the moon paths,” I said, with a bit more vehemence than I’d meant to. 
 
 Cynara stared at me. 
 
