edit bound prophet desc

--- a/src/collections/proof-of-existence/3.md
+++ b/src/collections/proof-of-existence/3.md
@@ -208,7 +208,7 @@ Whatever, this wasn’t the important point right now. What was important was th
 >
 > **Description:** The dreamer of another future fears making great changes, lest the future slip out of control. Go forth and walk step by step to the end; pursue as many variations as you like, for the destination you have envisioned will not change. But surely the small changes you accumulate will be enough to divert the path at the most critical moment. Otherwise, what is it all for?
 >
-> **Title Skill:** When the user sleeps, they can dream of the future, from now until a selected future point in time. After waking, until they reach that future point in the real world, they will not be able to dream of a different end. 
+> **Title Skill:** When the user sleeps, they can dream of the future, from now until a chosen future point in time. Until they reach the end date of the future that they have seen, they will not be able to dream of a different end. 
 >
 > **Note:** Kosmonymia is watching you. 
 Everything I knew about titles suggested that titles followed from the title holder’s abilities and actions, not the other way around, so I really had to wonder what Acacius had done to get a title like this. 
