edit title tattoo desc

--- a/src/collections/proof-of-existence/2.md
+++ b/src/collections/proof-of-existence/2.md
@@ -4,7 +4,7 @@ arc: 1
 chapter: 2
 characters: ["cynara", "graves", "zaire", "cyprian", "luka"]
 warnings: []
-lastEdit: 2025-03-21
+lastEdit: 2025-03-25
 ---
 After reading through the entire Record of Existence, I took a moment to gather my thoughts. 
 
@@ -188,9 +188,9 @@ Okay, I decided. My last-ditch plan would no longer be faking my death and runni
 
 I just needed to be mindful of a few details while I was here. 
 
-I looked at myself in the mirror, at the pink acacia flowers tattooed over my heart, and the thin golden chains that encircled them. The symbols of Acacius’ other titles were scattered all over my skin.
+I looked at myself in the mirror, at the pink acacia flowers tattooed over my heart, and the thin golden chains that encircled them. The symbols of my other titles were scattered all over my skin. Only my World Proof, [Honest Man's Deception], wasn't there. 
 
-The biggest problem, even now, was the black knife on the inside of my left forearm. Anyone who had seen `[Caller of What Must Be True]` would recognize it instantly, and then they might ask why Acacius’ World Proof had transformed into a normal title, and then I’d have to do something about them. And if things got violent, well. Wouldn’t that just be so sad? 
+Which meant that I had a huge problem: the black knife on the inside of my left forearm. Anyone who had seen `[Caller of What Must Be True]` before would recognize it instantly, and then they might ask why Acacius’ World Proof had transformed into a normal title, and then I’d have to do something about them. And if things got violent, well. Wouldn’t that just be so sad? 
 
 It looked like I wouldn’t be wearing anything short-sleeved in the near future. Fortunately, from what I’d seen, Acacius’ wardrobe consisted almost exclusively of long-sleeved shirts. 
 
